update navbar, fixed spacing

--- a/src/comp/Navbar.css
+++ b/src/comp/Navbar.css
@@ -135,7 +135,7 @@
 	text-decoration: none !important;
 	position: relative;
 	display: inline-block;
-	font-size: 1.4rem !important;
+	font-size: 1.7rem !important;
 	color: #215d4e !important;
 	font-family: "Kanit", serif !important;
 	font-weight: 500 !important;
