--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -52,7 +52,6 @@
 	width: 95%;
 	max-width: 1200px;
 	margin: 0.5rem auto 1rem auto;
-	;
 	padding: 3rem;
 	gap: 2rem;
 	border: 5px solid white;
@@ -66,7 +65,6 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	margin-left: 1rem;
 }
 
 .right-column {
@@ -75,7 +73,6 @@
 	padding: 0;
 	justify-content: center;
 	align-items: center;
-	margin-right: 1rem;
 }
 
 
@@ -115,7 +112,6 @@
 	width: 95%;
 	max-width: 1200px;
 	margin: 0.5rem auto 1rem auto;
-	;
 	padding: 3rem;
 	gap: 2rem;
 	border: 5px solid white;
@@ -188,7 +184,6 @@
 	}
 
 	.volunteer-text {
-		margin-left: 1rem !important;
 		justify-content: center;
 		align-items: center;
 		text-align: center;
@@ -237,7 +232,6 @@
 		font-size: 1.2rem;
 		text-align: center;
 		max-width: 80%;
-		margin-right: 1rem !important;
 	}
 
 	.sensor-image {
